# IspBirntg

./: .env.example  .gitignore  CLAUDE.md  README.md  spec.md  start.bat  start.py  start_mac.py  start_win.py
backend/: .gitignore  manage.py  package-lock.json  package.json  pyproject.toml
backend/apps/conversations/: admin.py  annotation_views.py  models.py  serializers.py  urls.py  views.py
backend/apps/conversations/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20250911_1916.py  0004_alter_conversation_pdfs.py  0005_imageattachment_message_images.py  0006_folder_conversation_folder.py  0007_pdfannotation_pdfreadingstate.py
backend/apps/llm_integration/: apps.py
backend/apps/pdfs/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/pdfs/migrations/: 0001_initial.py  0002_remove_pdfdocument_conversations.py
backend/apps/rag/: apps.py  services.py
backend/apps/system_config/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/system_config/management/commands/: init_configs.py
backend/apps/system_config/migrations/: 0001_initial.py  0002_alter_systemconfig_options_and_more.py  0003_systemconfig_rag_enabled.py  0004_systemconfig_process_images.py
backend/config/: settings.py  urls.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/hooks/: index.ts  useDebounce.ts  useInputState.ts  useTypewriter.ts
frontend/src/services/: api.ts
frontend/src/utils/: browserDetection.ts  demo.ts  (+4 more)
scripts/: setup.py  start.py
(+12 files in other folders)
